--- a/qml.qrc
+++ b/qml.qrc
@@ -3,6 +3,6 @@
         <file>qml/ControlView.qml</file>
         <file>qml/MainView.qml</file>
         <file>qml/QPhotoView.qml</file>
-        <file>img/icon/open.svg</file>
+        <file>icon/open.svg</file>
     </qresource>
 </RCC>
